# hyli

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.dependencies  LICENSE  README.md  clippy.toml  package-lock.json
.cargo/: config.toml
crates/bonsai-runner/: Cargo.toml
crates/bonsai-runner/src/: lib.rs
crates/client-sdk/: Cargo.toml
crates/client-sdk/src/: contract_indexer.rs  helpers.rs  lib.rs  light_executor.rs  rest_client.rs  tcp_client.rs  tests.rs  transaction_builder.rs
crates/contract-sdk/: Cargo.toml  README.md
crates/contract-sdk/src/: caller.rs  guest.rs  lib.rs  merkle_utils.rs  secp256k1.rs  utils.rs
crates/contracts/amm/: Cargo.toml  amm.img  amm.txt
crates/contracts/amm/src/: lib.rs  main.rs
crates/contracts/amm/src/client/: tx_executor_handler.rs
crates/contracts/hydentity/: Cargo.toml  hydentity.img  hydentity.txt
crates/contracts/hydentity/examples/: host.rs
crates/contracts/hydentity/src/: identity_provider.rs  indexer.rs  lib.rs  main.rs
crates/contracts/hydentity/src/client/: tx_executor_handler.rs
crates/contracts/hyllar/: Cargo.toml  hyllar.img  hyllar.txt
crates/contracts/hyllar/examples/: host.rs
crates/contracts/hyllar/src/: erc20.rs  indexer.rs  lib.rs  main.rs
crates/contracts/hyllar/src/client/: tx_executor_handler.rs
crates/contracts/hyllar/tests/: hyllar_r0.rs
crates/contracts/hyperlane-bridge/: Cargo.toml  hyperlane-bridge.img  hyperlane-bridge.txt
crates/contracts/smt-token/: Cargo.toml  smt-token.img  smt-token.txt
crates/contracts/smt-token/examples/: host.rs
crates/contracts/smt-token/src/: account.rs  indexer.rs  lib.rs  main.rs
crates/contracts/smt-token/tests/: smt_integ_tests.rs
crates/hyle-crypto/: Cargo.toml
crates/hyle-crypto/src/: lib.rs
crates/hyle-loadtest/: Cargo.toml
crates/hyle-loadtest/src/: lib.rs
crates/hyle-model/: Cargo.toml
crates/hyle-model/src/: admin.rs  api.rs  block.rs  contract.rs  lib.rs  transaction.rs  utils.rs  verifiers.rs
crates/hyle-model/src/node/: consensus.rs  data_availability.rs  mempool.rs
crates/hyle-modules/: Cargo.toml
crates/hyle-modules/src/: bus.rs  node_state.rs
crates/hyle-modules/src/bus/: command_response.rs  metrics.rs
crates/hyle-modules/src/modules/: admin.rs  bus_ws_connector.rs  contract_state_indexer.rs  da_listener.rs  gcs_conf_defaults.toml  gcs_uploader.rs  mod.rs  prover.rs  prover_metrics.rs  rest.rs  signed_da_listener.rs  websocket.rs
crates/hyle-modules/src/node_state/: api.rs  contract_registration.rs  hyle_tld.rs  metrics.rs  module.rs  ordered_tx_map.rs  timeouts.rs
crates/hyle-modules/src/utils/: conf.rs  conf_defaults.toml  da_codec.rs  logger.rs  mod.rs  native_verifier_handler.rs
crates/hyle-net/: Cargo.toml
crates/hyle-net/src/: logged_task.rs  metrics.rs  tcp.rs
crates/hyle-net/src/tcp/: p2p_server.rs  tcp_server.rs
crates/hyle-verifiers/: Cargo.toml
crates/hyle-verifiers/src/: lib.rs  native_impl.rs  noir_utils.rs
crates/hyli-bus/: Cargo.toml
crates/hyli-bus/src/: bus.rs  lib.rs  modules.rs
crates/hyli-bus/src/bus/: command_response.rs  metrics.rs
crates/hyli-bus/src/modules/: tests.rs
crates/hyli-bus/src/utils/: checksums.rs  deterministic_rng.rs  logger.rs  mod.rs
crates/hyli-loadtest/: Cargo.toml
crates/hyli-loadtest/src/: lib.rs  main.rs  smt_long_running_test_conf_defaults.toml
crates/hyli-model/: Cargo.toml  README.md
crates/hyli-model/src/: api.rs  block.rs  bus_impls.rs  contract.rs  indexer.rs  lib.rs  sqlx_impls.rs  staking.rs  transaction.rs  utils.rs  verifier_worker.rs  verifiers.rs
crates/hyli-model/src/node/: consensus.rs  crypto.rs  data_availability.rs  mempool.rs
crates/hyli-modules/: Cargo.toml
crates/hyli-modules/src/: bus.rs  lib.rs  node_state.rs
crates/hyli-modules/src/bus/: command_response.rs
crates/hyli-modules/src/modules/: admin.rs  block_processor.rs  bus_ws_connector.rs  contract_listener.rs  contract_state_indexer.rs  da_listener.rs  da_listener_metrics.rs  gcs_uploader.rs  gcs_uploader_metrics.rs  indexer.rs  mod.rs  node_state_processor.rs  prover.rs  prover_metrics.rs  rest.rs  signed_da_listener.rs  websocket.rs
crates/hyli-modules/src/node_state/: api.rs  block_retrocompat.rs  contract_registration.rs  hyli_tld.rs  metrics.rs  module.rs  native_verifiers.rs  ordered_tx_map.rs  timeouts.rs
crates/hyli-modules/src/utils/: blocking_call.rs  da_codec.rs  db.rs  deterministic_rng.rs  fjall_metrics.rs  logger.rs  mod.rs  native_verifier_handler.rs  profiling.rs  ring_buffer_map.rs  tracing.rs  turmoil_time.rs
crates/hyli-net-macros/: Cargo.toml
crates/hyli-net-macros/src/: lib.rs
crates/hyli-net-traits/: Cargo.toml
crates/hyli-net-traits/src/: lib.rs
crates/hyli-net-traits/tests/: tcp_message_label_derive.rs
crates/hyli-telemetry/: Cargo.toml
crates/hyli-telemetry/src/: lib.rs
crates/hyli-test-containers/: Cargo.toml
crates/hyli-test-containers/src/: lib.rs
crates/hyli-tools/: Cargo.toml
crates/hyli-tools/src/: auto_provers_conf_defaults.toml  gcs_block_uploader.rs  lib.rs  nuke_tx_conf_defaults.toml  nuke_tx_module.rs  rate_limiter_proxy_conf_defaults.toml  signed_da_listener.rs  smt_auto_prover_conf_defaults.toml
crates/hyli-turmoil-shims/: Cargo.toml
crates/hyli-turmoil-shims/src/: collections.rs  lib.rs  rng.rs  runtime.rs  telemetry.rs  tokio_select.rs
crates/hyli-verifiers/: Cargo.toml
crates/hyli-verifiers/src/: jolt.rs  lib.rs  native_impl.rs  noir_utils.rs  reth.rs
crates/hylix/: CLI_STRUCTURE.md  Cargo.toml  README.md  Testing.md
crates/hylix/examples/: basic_usage.rs
crates/hylix/src/: config.rs  constants.rs  docker.rs  env_builder.rs  error.rs  lib.rs  logging.rs  main.rs  process.rs  validation.rs
crates/hylix/src/commands/: bake.rs  build.rs  clean.rs  config.rs  contract.rs  devnet.rs  mod.rs  new.rs  run.rs  test.rs
crates/jolt-verifier-worker/: Cargo.toml
crates/jolt-verifier-worker/src/: main.rs
crates/noir-tools/: Cargo.toml
crates/noir-tools/src/: main.rs
crates/verifier-worker/: Cargo.toml
crates/verifier-worker/src/: lib.rs
(+275 files in other folders)
