[workspace]
members = [
  "crates/contracts",
  "crates/contracts/amm",
  "crates/contracts/hydentity",
  "crates/contracts/hyllar",
  "crates/contracts/smt-token",
  "crates/contracts/staking",
  "crates/contracts/risc0-recursion",
  "crates/contracts/uuid-tld",

  "crates/bonsai-runner",
  "crates/client-sdk",
  "crates/contract-sdk",
  "crates/hyle-loadtest",
  "crates/hyle-model",
  "crates/hyle-crypto",
  "crates/hyle-verifiers",
  "crates/hyle-modules",
  "crates/hyli-tools",
  "crates/noir-tools",
]
default-members = [
  "crates/contracts",
  "crates/contracts/hydentity",
  "crates/hyle-loadtest",
  "crates/hyle-model",
  "crates/hyle-crypto",
  "crates/hyle-net",
  "crates/hyle-modules",
  "crates/hyli-tools",
  ".",
]
resolver = "2"

[workspace.package]
version = "0.13.0-rc.4"
edition = "2021"
homepage = "https://hyli.org/"
repository = "https://github.com/hyli-org/hyli/"
rust-version = "1.84"
license-file = "LICENSE"

[workspace.dependencies]
bonsai-runner = { version = "0.13.0-rc.4", default-features = false, path = "crates/bonsai-runner", package = "hyle-bonsai-runner" }
sdk = { version = "0.13.0-rc.4", default-features = false, path = "crates/contract-sdk", package = "hyle-contract-sdk" }
hyle-contract-sdk = { version = "0.13.0-rc.4", default-features = false, path = "crates/contract-sdk", package = "hyle-contract-sdk" }
client-sdk = { version = "0.13.0-rc.4", default-features = false, path = "crates/client-sdk", package = "hyle-client-sdk" }
hyle-net = { version = "0.13.0-rc.4", default-features = false, path = "crates/hyle-net", package = "hyle-net" }
hyle-model = { version = "0.13.0-rc.4", default-features = false, path = "crates/hyle-model", package = "hyle-model" }
hyle-crypto = { version = "0.13.0-rc.4", default-features = false, path = "crates/hyle-crypto", package = "hyle-crypto" }
hyle-verifiers = { version = "0.13.0-rc.4", default-features = false, path = "crates/hyle-verifiers", package = "hyle-verifiers" }
risc0-recursion = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts/risc0-recursion", package = "hyle-risc0-recursion" }
hydentity = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts/hydentity", package = "hyle-hydentity" }
hyllar = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts/hyllar", package = "hyle-hyllar" }
smt-token = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts/smt-token", package = "hyle-smt-token" }
staking = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts/staking", package = "hyle-staking" }
amm = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts/amm", package = "hyle-amm" }
uuid-tld = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts/uuid-tld", package = "hyle-uuid-tld" }
hyle-contracts = { version = "0.13.0-rc.4", default-features = false, path = "crates/contracts", package = "hyle-contracts" }
hyle-modules = { version = "0.13.0-rc.4", default-features = false, path = "crates/hyle-modules", package = "hyle-modules" }

# Common external dependencies
alloc-metrics = { version = "0.1.1" }
anyhow = { version = "1.0.98" }
anymap = { version = "0.12.1", default-features = false }
assertables = { version = "9.8.0", default-features = false }
axum = { version = "0.8.4" }
base64 = { version = "0.22.1" }
bincode = { version = "1.3.3" }
blst = { version = "0.3.14", default-features = false }
bonsai-sdk = { version = "1.2.4", default-features = false }
borsh = { version = "1.5.6" }
boundless-market = { version = "0.7.0", default-features = false }
bytemuck = { version = "1.23.1", default-features = false }
bytes = { version = "1.10.0", default-features = false }
chrono = { version = "0.4", default-features = false }
clap = { version = "4.5.41", default-features = false, features = ["derive"] }
config = { version = "0.15.13", default-features = false }
crossterm = { version = "0.29.0" }
dashmap = { version = "6.1.0", default-features = false }
derive_more = { version = "2.0.1", default-features = false }
dhat = { version = "0.3.3", default-features = false }
fjall = { version = "2.11.1", default-features = false }
futures = { version = "0.3.31" }
google-cloud-storage = { version = "0.24.0" }
hex = { version = "0.4.3" }
http-body-util = { version = "0.1.3", default-features = false }
hyper = { version = "1.6.0", default-features = false }
hyper-util = { version = "0.1.15", default-features = false }
indexmap = { version = "2.10.0", default-features = false }
keyring = { version = "3", default-features = false }
mockall = { version = "0.13.0", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
opentelemetry = { version = "0.28.0" }
opentelemetry-prometheus = { version = "0.28.0" }
opentelemetry_sdk = { version = "0.28.0" }
paste = { version = "1.0.15", default-features = false }
prometheus = { version = "0.13.4" }
quote = { version = "1.0.39", default-features = false }
rand = { version = "=0.8.5" }
rand_seeder = { version = "0.4.0" }
ratatui = { version = "0.29.0", default-features = false }
readonly = { version = "0.2.12", default-features = false }
risc0-build = { version = "2.1", default-features = false }
risc0-zkvm = { version = "2.1", default-features = false }
secp256k1 = { version = "0.31.1" }
seq-macro = { version = "0.3.6", default-features = false }
serde = { version = "1.0" }
serde_json = { version = "1.0.140" }
serde_with = { version = "3.14.0" }
sha2 = { version = "=0.10.8" }
sha3 = { version = "0.10.8" }
sp1-sdk = { version = "5.0.8", default-features = false }
sp1-zkvm = { version = "5.0.8", default-features = false }
sparse-merkle-tree = { version = "0.6.1", default-features = false }
sqlx = { version = "0.8.6" }
strum = { version = "0.27.1", default-features = false }
strum_macros = { version = "0.27.1", default-features = false }
syn = { version = "2.0.104" }
tempfile = { version = "3.20.0", default-features = false }
test-log = { version = "0.2.18", default-features = false }
testcontainers-modules = { version = "0.12.1", default-features = false }
tokio = { version = "1.46.1" }
tokio-util = { version = "0.7.14" }
toml = { version = "0.8.22", default-features = false }
tower-http = { version = "0.6.5", default-features = false }
tower-service = { version = "0.3.3", default-features = false }
tower_governor = { version = "0.7" }
tracing = { version = "0.1", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false }
turmoil = { version = "0.6.6" }
ureq = { version = "3.0.11", default-features = false }
utoipa = { version = "5.4.0" }
utoipa-axum = { version = "0.2.0" }
utoipa-swagger-ui = { version = "9.0.2" }
uuid = { version = "1.17.0", default-features = false }
whoami = { version = "1.5.2", default-features = false }

[package]
name = "hyle"
description = "Hyli node"
license-file = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
default-run = "hyle"

[[bin]]
name = "hyle"

[[bin]]
name = "indexer"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
unused_result_ok = "warn"
indexing_slicing = "warn"
undocumented_unsafe_blocks = "warn"

[dependencies]
# Public dependencies
hyle-contract-sdk = { workspace = true, default-features = false, features = [
  "tracing",
] }
staking = { workspace = true, default-features = false, features = ["client"] }
client-sdk = { workspace = true, features = ["rest", "indexer"] }
hyle-net = { workspace = true }
hyle-model = { workspace = true, default-features = false, features = [
  "full",
  "sqlx",
] }
hyle-crypto = { workspace = true }
hydentity = { workspace = true, features = ["client"] }
hyllar = { workspace = true, features = ["client"] }
smt-token = { workspace = true, features = ["client"] }
risc0-recursion = { workspace = true }
hyle-verifiers = { workspace = true }
hyle-contracts = { workspace = true }
hyle-modules = { workspace = true }


anyhow = { workspace = true }
borsh = { workspace = true, features = ["rc"] }
chrono = { workspace = true, features = ["std", "serde"] }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex"] }
sha3 = { workspace = true }
strum_macros = "0.27.1"
tracing = { workspace = true }

assertables = { workspace = true }
axum = { workspace = true, features = ["macros"] }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
config = { workspace = true, default-features = false, features = ["toml"] }
futures = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
opentelemetry = { workspace = true }
opentelemetry-prometheus = { workspace = true }
opentelemetry_sdk = { workspace = true }
paste = { workspace = true }
prometheus = { workspace = true }
rand = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio",
  "postgres",
  "migrate",
  "chrono",
] }
tokio = { workspace = true, features = ["full", "tracing"] }
tokio-util = { workspace = true }
fjall = { workspace = true }

dhat = { workspace = true, optional = true }
alloc-metrics = { workspace = true, optional = true }
utoipa = { workspace = true, features = ["axum_extras"] }
utoipa-axum = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
toml = { workspace = true }

# We force zip version here as later version is not compatible with utoipa-swagger-ui
zip = "=3.0.0"
seq-macro = "0.3.6"
async-stream = "0.3.6"

[package.metadata.cargo-machete]
ignored = ["zip", "bytes", "tokio-util"]

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }

[dev-dependencies]
amm = { workspace = true, features = ["client"] }
uuid-tld = { workspace = true, features = ["client"] }
smt-token = { workspace = true, features = ["client", "risc0"] }
client-sdk = { workspace = true, default-features = false, features = [
  "rest",
  "risc0",
] }
hyle-modules = { workspace = true, default-features = false, features = [
  "test",
] }

assert_cmd = "2.0.17"
axum-test = { version = "17.2.0" }
tokio-tungstenite = "0.26.2"
serde_json = { workspace = true }
test-log = { version = "0.2.17", features = [
  "color",
  "trace",
], default-features = false }
tokio-stream = "0.1.17"
tempfile = "3.20.0"
assert-json-diff = "2.0.2"
risc0-recursion = { workspace = true }
risc0-zkvm = { workspace = true, default-features = false, features = [
  "client",
] }
signal-child = "1.0.6"

[features]
default = ["risc0"]

turmoil = ["hyle-net/turmoil", "client-sdk/turmoil"]

risc0 = ["hyle-verifiers/risc0", "client-sdk/risc0"]
sp1 = ["hyle-verifiers/sp1", "client-sdk/sp1"]

# Disable dependency keyring by default, as it requires libdbus
keyring = ["hyle-crypto/keyring"]

dhat = ["dep:dhat"]
monitoring = ["dep:alloc-metrics"]

# Activate this feature to recompile contracts locally (mostly useful for iterating on tests)
nonreproducible = ["hyle-contracts/nonreproducible"]
node_local_proving = ["risc0-zkvm/client"]

[profile.release]
# Turn off LTO, takes too long
lto = "off"
incremental = true

[profile.profiling]
inherits = "release"
debug = true         # Keep debug info for profiling
strip = "none"

# Optimize the following crates for development builds so tests are faster
[profile.dev.package.risc0-binfmt]
opt-level = 3

[profile.dev.package.sha2]
opt-level = 3
