[package]
name = "hyle-bonsai-runner"
description = "Hyli async lib to use risc0 bonsai"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "bonsai-runner"
required-features = ["bonsai-runner"]

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
borsh = { workspace = true }

bonsai-sdk = { workspace = true, features = ["non_blocking"] }
boundless-market = { workspace = true }
hyle-net = { workspace = true }
risc0-zkvm = { workspace = true }
bytemuck = { workspace = true }
# Has to be compatible with whatever bonsai-sdk returns, which is not really documented...
bincode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["time"] }

# For server only
axum = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[features]
bonsai-runner = ["axum", "serde_json", "tokio/full", "tracing-subscriber"]

# Feature par défaut
default = ["bonsai-runner"]
