[package]
name = "hyli-client-sdk"
description = "Hyli client SDK"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
hyli-model = { workspace = true }
sdk = { workspace = true, default-features = false, features = ["full-model"] }
bonsai-runner = { workspace = true, optional = true }
hyli-net = { workspace = true }
hyli-registry = { workspace = true }

anyhow = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

risc0-zkvm = { workspace = true, default-features = false, optional = true }
sp1-sdk = { workspace = true, default-features = false, features = [
  "network",
], optional = true }
bincode = { workspace = true, optional = true }


# Tcp feature
tokio = { workspace = true, optional = true }

# Indexer feature, these are re-exported
axum = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
utoipa-axum = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
test-log = { workspace = true, features = [
  "color",
  "trace",
], default-features = false }

[features]
turmoil = ["hyli-net/turmoil"]
rest = []
indexer = ["dep:utoipa", "dep:axum", "dep:utoipa-axum", "dep:tokio"]
risc0 = ["dep:risc0-zkvm", "dep:bonsai-runner"]
sp1 = ["dep:sp1-sdk", "dep:bincode"]
instrumentation = ["hyli-net/instrumentation"]

[package.metadata.docs.rs]
all-features = true
