[package]
name = "hyle-contract-sdk"
description = "Hyli smart contract SDK"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = "1.81"

[lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
unused_result_ok = "warn"
indexing_slicing = "warn"
undocumented_unsafe_blocks = "warn"

[dependencies]
hyle-model = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive", "alloc"] }
sha2 = { workspace = true }                                  # precompile patched at workspace root
borsh = { workspace = true }
tracing = { workspace = true, optional = true }

sparse-merkle-tree = { workspace = true, optional = true }

risc0-zkvm = { workspace = true, optional = true }
sp1-zkvm = { workspace = true, optional = true, features = ["lib"] }

[features]
risc0 = ["dep:risc0-zkvm"]
sp1 = ["dep:sp1-zkvm"]
smt = ["dep:sparse-merkle-tree"]
tracing = ["dep:tracing"]
full-model = ["hyle-model/full"]
