[package]
name = "hyle-crypto"
description = "Hyli module for cryptographic operations"
license-file = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
hyle-model = { workspace = true, features = ["full"] }

blst = { workspace = true }
rand = { version = "0.9" }
anyhow = { workspace = true }
borsh = { workspace = true }
hex = { workspace = true }

keyring = { workspace = true, features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
], optional = true }
whoami = { workspace = true, optional = true }

[features]
default = []

# Disable dependency keyring by default, as it requires libdbus
keyring = ["dep:keyring", "dep:whoami"]
