[package]
name = "hyle-loadtest"
description = "Hyli loadtest tooling"
license-file.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true


[dependencies]
tokio = { workspace = true, features = ["full", "tracing"] }
hyllar = { workspace = true, features = ["client"] }
hydentity = { workspace = true, features = ["client"] }
hyle-contracts = { workspace = true }
hyle-contract-sdk = { workspace = true, features = ["tracing"] }
client-sdk = { workspace = true, features = ["rest", "risc0"] }
anyhow = { workspace = true }
borsh = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { version = "0.9" }
