[package]
name = "hyle-model"
description = "Hyli datamodel"
license = "MIT"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = "1.81"

[dependencies]
borsh = { workspace = true, features = ["derive", "rc", "std"] }
hex = { workspace = true }
serde = { workspace = true, features = ["derive", "rc"] }

readonly = "0.2.12"
sha3 = { workspace = true, optional = true }
blst = { workspace = true, optional = true }
strum_macros = { workspace = true, optional = true }
derive_more = { workspace = true, features = ["display"] }
base64 = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
sqlx = { workspace = true, features = ["postgres"], optional = true }
serde_with = { workspace = true, features = ["hex"], optional = true }
serde_json = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
secp256k1 = { workspace = true, optional = true }
strum = { workspace = true }

[features]
# disable default feature if you want minimalist definitions for contracts
default = ["full"]
full = [
  "dep:sha3",
  "dep:strum_macros",
  "dep:blst",
  "dep:base64",
  "dep:serde_json",
  "dep:serde_with",
  "dep:anyhow",
  "dep:utoipa",
  "dep:secp256k1",
  "dep:sha2",
]
sqlx = ["dep:sqlx"]
